2004-02-26  Alexander Larsson  <alexl@redhat.com>

	* daemon/gnome-vfs-daemon-dir-handle.c:
	(gnome_vfs_daemon_dir_handle_read):
	* daemon/gnome-vfs-daemon-handle.c: (gnome_vfs_daemon_handle_read):
	* daemon/gnome-vfs-daemon.c: (get_volumes), (get_drives):

	Fix some corba leaks. (#135034)
	Found by nshmyrev@yandex.ru (Nickolay V. Shmyrev)
	
2004-02-25  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added sr@ije to ALL_LINGUAS.

2004-02-25  Alexander Larsson  <alexl@redhat.com>

	* configure.in: 
	* Makefile.am (SUBDIRS):
	* gtk/*
	Remove gtk module. Now in libgnomeui

2004-02-25  Alexander Larsson  <alexl@redhat.com>

	* modules/file-method.c:
	remove fam watch if fam connection dies
	make fam global vars static.

=== gnome-vfs 2.5.8 ===

2004-02-23  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Bump to 2.5.8

2004-02-20  Christophe Fergeau  <teuf@gnome.org>
	
	* libgnomevfs/gnome-vfs-mime.c: fix smart sniffing of text files

2004-02-19  Julio M. Merino Vidal <jmmv@menta.net>

	* configure.in: 
	Add --with-gtk=yes/no/auto option

2004-02-19  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Don't fail if libgnomeui not found.

2004-02-18  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-filesystem-type.c:
	Add NetBSD filesystems. Patch from jmmv@menta.net

2004-02-17  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am:
	* configure.in:
	Build the gtk subdir if gtk availible.

2004-02-14  Julio M. Merino Vidal <jmmv@menta.net>

	* configure.in: checks for sysctlbyname availability
	* libgnomevfs/gnome-vfs-unix-mounts.c: fix compilation on NetBSD

2004-02-14  Julio M. Merino Vidal <jmmv@menta.net>

	* libgnomevfs/gnome-vfs-cdrom.c: fixed compilation on NetBSD

2004-02-11  Alexander Larsson  <alexl@redhat.com>

	* modules/computer-method.c (get_data_for_drive):
	Avoid really really silly drive names.

=== gnome-vfs 2.5.7 ===

2004-02-11  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am: